infras/k8s-dev/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dv-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: stevanoz.dev.xyz
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dv-user-svc
                port:
                  number: 8080
          - path: /api/notification/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dv-notification-svc
                port:
                  number: 8080
